# CubismNova

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .readthedocs.yml  01_notes.md  02_client.h  CMakeLists.txt  Doxyfile  LICENSE  README.md  README.rst  cmake_init.sh  meson.build  meson_options.txt
.circleci/: config.yml
docs/: .gitignore  Doxyfile  Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/Alloc/: AlignedBlockAllocator.rst  index.rst
docs/source/Block/: Data.rst  Field.rst
docs/source/Core/: Index.rst  Range.rst  Vector.rst  index.rst
docs/source/Grid/: BlockFieldAssembler.rst  Cartesian.rst  index.rst
docs/source/Mesh/: StructuredUniform.rst
docs/source/Util/: INIParser.rst  Profiler.rst  Sampler.rst  Timer.rst  (+2 more)
docs/srs/: cubism_nova_srs.md
include/: meson.build
include/Cubism/: Common.h  Compiler.h  Config.h.in  Math.h  meson.build
include/Cubism/Alloc/: AlignedBlockAllocator.h
include/Cubism/BC/: Absorbing.h  Base.h  Dirichlet.h  Symmetry.h
include/Cubism/Base/: BlockField.h
include/Cubism/Block/: Data.h  DataLab.h  DataLabLoader.h  Field.h  FieldLab.h  FieldLabLoader.h  FieldOperator.h
include/Cubism/Core/: BlockAllocator.h  Common.h  Index.h  Math.h  Profiler.h  Range.h  Stencil.h  Timer.h  Vector.h
include/Cubism/Grid/: BlockFieldAssembler.h  Cartesian.h  CartesianMPI.h
include/Cubism/Grid/MPI/: Cartesian.h
include/Cubism/IO/: CartesianHDF.h  CartesianMPIHDF.h  Data.h  FieldAOS.h  FieldHDF.h  HDFDriver.h  XDMFDriver.h
include/Cubism/Mesh/: StructuredBase.h  StructuredUniform.h
include/Cubism/Util/: Histogram.h  INIParser.h  Profiler.h  Sampler.h  Timer.h  Version.h
include/Cubism/core/: Profiler.h  Timer.h
src/: CMakeLists.txt  meson.build
src/IO/: CMakeLists.txt  HDFDriver.cpp  meson.build
src/Util/: CMakeLists.txt  Histogram.cpp  INIParser.cpp  Profiler.cpp  Version.cpp.in  meson.build
subprojects/: .gitignore  gtest-mpi-listener.wrap
test/: CMakeLists.txt  README.md  meson.build
test/Concepts/FieldView/: Makefile
test/Core/Vector/: TestVector.cpp
test/Fields/BlockField/: FieldIndexing.cpp  Makefile  TestBlockField.cpp  TestBlockField.h
test/Tests/: CMakeLists.txt  meson.build
test/Tests/IO/: CMakeLists.txt  meson.build
test/Tests/IO/Data/: DataHDFTest.cpp
test/Tests/IO/HDF/: CartesianHDFTest.cpp  FieldHDFTest.cpp
test/Tests/Util/: CMakeLists.txt  meson.build
test/Tests/Util/INIParser/: INIParserTest.cpp
test/Tests/Util/INIParser/INIFiles/: incA.ini  incAa.ini  incAaa.ini  incB.ini  main.ini
test/Tests/Util/Version/: VersionTest.cpp
test/TestsMPI/: CMakeLists.txt  main.cpp  meson.build  mpirun.wrapper
test/TestsMPI/Grid/: CartesianMPITest.cpp  meson.build
test/TestsMPI/IO/: CartesianMPIHDFTest.cpp  meson.build
test/UnitTests/: .gitignore  CMakeLists.txt  Makefile  meson.build
test/UnitTests/Alloc/: AlignedBlockAllocatorTest.cpp
test/UnitTests/BC/: AbsorbingTest.cpp  BaseTest.cpp  CommonTest.cpp  DirichletTest.cpp  FieldAndLab.h  SymmetryTest.cpp
test/UnitTests/Base/: BlockFieldTest.cpp
test/UnitTests/Block/: DataLabTest.cpp  DataTest.cpp  FieldLabTest.cpp  FieldTest.cpp
test/UnitTests/Core/: IndexTest.cpp  RangeTest.cpp  StencilTest.cpp  VectorTest.cpp
test/UnitTests/Grid/: CartesianTest.cpp
test/UnitTests/IO/: FieldAOSTest.cpp
test/UnitTests/Mesh/: BlockMeshTest.cpp  StructuredUniformTest.cpp
test/UnitTestsMPI/: CMakeLists.txt  main.cpp
test/UnitTestsMPI/Grid/: CartesianMPITest.cpp  CartesianTest.cpp
test/concepts/field_view/: .gitignore  Makefile  field_view.cpp
test/sandbox/: CMakeLists.txt  meson.build
test/sandbox/Benchmarks/CubismLegacy/src/: ArgumentParser.cpp
test/sandbox/Benchmarks/CubismNova/: lib
test/sandbox/Benchmarks/DivergenceKernel/: .gitignore
test/sandbox/Benchmarks/DivergenceKernel/legacy/: BlockProcessor.h  BoundaryConditions.h  Makefile  Types.h  legacy.cpp
test/sandbox/Benchmarks/DivergenceKernel/nova/: Makefile  env.sh  nova.cpp
test/sandbox/Benchmarks/ISPC/: BaseBenchmark.cpp  BaseBenchmark.h  Benchmark.h  Common.h  main.cpp  meson.build  meson_options.txt
test/sandbox/Benchmarks/ISPC/CFD_2ndOrder/: Benchmark.cpp  Benchmark.h  Gold.cpp  Gold.h  Kernels.h  ddx.ispc  meson.build
test/sandbox/Benchmarks/ISPC/CFD_2ndOrder/DDX/: Benchmark.cpp  Benchmark.h  Gold.cpp  Kernels.h  ddx.ispc  ddxGold.cpp  ddxSlice.cpp  meson.build
test/sandbox/Benchmarks/ISPC/CFD_2ndOrder/DDXSlice/: Benchmark.cpp  Benchmark.h  Gold.cpp  Gold.h  Kernels.h  ddxSlice.ispc  meson.build
test/sandbox/Benchmarks/ISPC/subprojects/: .gitignore  CubismNova.wrap
test/sandbox/Benchmarks/Kernel/Divergence/: .gitignore  post.py
test/sandbox/Benchmarks/Kernel/Divergence/amrex/: Makefile  amrex.cpp
test/sandbox/Benchmarks/Kernel/Divergence/aphros/: Makefile  aphros.cpp  env.sh
test/sandbox/Benchmarks/Kernel/Divergence/euler/: .gitignore  common.sh  epilog.sh  job.sh  prolog.sh  submit.py
test/sandbox/Benchmarks/Kernel/Divergence/legacy/: BlockProcessor.h  Makefile  Types.h  legacy.cpp
test/sandbox/Benchmarks/Kernel/Divergence/nova/: Makefile  env.sh  nova.cpp
test/sandbox/Benchmarks/Kernel/Laplacian/: Laplacian.cpp  meson.build
test/sandbox/Benchmarks/Utils/: Timer.h
test/sandbox/Concepts/FieldView/: .gitignore  FieldView.cpp
test/sandbox/Fields/BlockField/: Makefile  TestBlockField.cpp  TestBlockField.h
test/sandbox/Profiler/: .gitignore  CMakeLists.txt  TestProfiler.cpp  meson.build
test/sandbox/doc/notes/: 01_notes.md  02_client.h
test/sandbox/docker/: run_debian.sh  run_fedora.sh
test/sandbox/meson/: main.cpp  main_mpi.cpp  meson.build
test/tmp/Core/Vector/: .gitignore  Makefile
test/tmp/Fields/BlockField/: .gitignore  Makefile
third/: CMakeLists.txt  README.md
tools/: CMakeLists.txt  histbin  meson.build
tools/maintenance/: .gitignore  README.md  clang_tidy
tools/quality/: codecov  coverage  covreport  uncov
tools/style/: README.md  check_sanity  correct_style  format  sources.sh  tidy
tools/subprojects/: patch
tools/version/: bump_version  gen_version  gen_version.py  tag_version
(+66 files in other folders)
