option('CUBISM_COVERAGE',
  type : 'boolean',
  value : false,
  description : 'Build instrumented tests for code coverage',
  yield: false
)
option('CUBISM_IO',
  type : 'boolean',
  value : true,
  description : 'Build IO library',
  yield: true
)
option('CUBISM_TESTS',
  type : 'boolean',
  value : true,
  description : 'Build tests',
  yield: false
)
option('CUBISM_32BIT_INDEX',
  type : 'boolean',
  value : false,
  description : 'Enable 32bit signed indexing (default: signed 64bit)',
  yield: true
)
# option('CUBISM_OPTIMIZED_KERNELS',
#   type : 'boolean',
#   value : false,
#   description : 'Build library with performance optimized kernels',
#   yield: true
# )
option('IGNORE_UNKNOWN_PRAGMAS',
  type : 'boolean',
  value : true,
  description : 'Ignore warnings for unknown pragmas',
  yield: true
)
