# File       : meson.build
# Created    : Tue Mar 23 2021 03:24:54 PM (+0100)
# Author     : Fabian Wermelinger
# Description: Meson build definition
# Copyright 2021 ETH Zurich. All Rights Reserved.

configure_file(
  input: 'Config.h.in',
  output: 'Config.h',
  install: true,
  install_dir: 'include/Cubism',
  configuration: cubismnova_conf,
)
