set(EXE UnitTests)
add_executable(${EXE})

target_include_directories(${EXE} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_sources(${EXE} PRIVATE Alloc/AlignedBlockAllocatorTest.cpp)
target_sources(${EXE} PRIVATE BC/AbsorbingTest.cpp)
target_sources(${EXE} PRIVATE BC/BaseTest.cpp)
target_sources(${EXE} PRIVATE BC/DirichletTest.cpp)
target_sources(${EXE} PRIVATE BC/SymmetryTest.cpp)
target_sources(${EXE} PRIVATE Block/DataLabTest.cpp)
target_sources(${EXE} PRIVATE Block/DataTest.cpp)
target_sources(${EXE} PRIVATE Block/FieldTest.cpp)
target_sources(${EXE} PRIVATE Core/IndexTest.cpp)
target_sources(${EXE} PRIVATE Core/RangeTest.cpp)
target_sources(${EXE} PRIVATE Core/StencilTest.cpp)
target_sources(${EXE} PRIVATE Core/VectorTest.cpp)
target_sources(${EXE} PRIVATE Grid/CartesianTest.cpp)
target_sources(${EXE} PRIVATE IO/FieldAOSTest.cpp)
target_sources(${EXE} PRIVATE Mesh/BlockMeshTest.cpp)
target_sources(${EXE} PRIVATE Mesh/StructuredUniformTest.cpp)

target_link_libraries(${EXE} gtest gtest_main)
gtest_discover_tests(${EXE})
